networking.yml
Resources: >
    Course 2 Final project - Networking

Parameters:
    EnvironmentName:
        Type: String
        Description: Environment variable
    vpcCIDR:
        Type: String
        Description: VPC CIDR
        Default: 10.0.0.0/20
    PublicSubnet1CIDR:
        Type: String
        Description: Public Subnet 1 CIDR
        Default: 10.0.0.0/24
    PublicSubnet2CIDR:
        Type: String
        Description: Public Subnet 2 CIDR
        Default: 10.0.1.0/24
    PrivateSubnet1CIDR:
        Type: String
        Description: Private Subnet 1 CIDR
        Default: 10.0.2.0/24
    PrivateSubnet2CIDR:
        Type: String
        Description: Private Subnet 1 CIDR
        Default: 10.0.3.0/24


Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties: 
            CidrBlock: !Ref vpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} VPC

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties: 
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} IG

    VPCGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties: 
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC


    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties: 
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet 1 

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties: 
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet 2

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties: 
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet 1

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties: 
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet 2

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        Properties: 
            Domain: vpc
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Nat Gateway 1 EIP


    NatGateway2EIP:
        Type: AWS::EC2::EIP
        Properties: 
            Domain: vpc
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Nat Gateway 2 EIP

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Nat Gateway 1

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Nat Gateway 2          

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public RouteTable
   
    PublicRoute:
        Type: AWS::EC2::Route
        Properties: 
            GatewayId: !Ref InternetGateway
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId: !Ref PublicRouteTable

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

    PrivateSubnetRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet 1 Route Table
    
    PrivateSubnet1Route:
        Type: AWS::EC2::Route
        Properties: 
            NatGatewayId: !Ref NatGateway1
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId: !Ref PrivateSubnetRouteTable1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PrivateSubnetRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateSubnetRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet 2 Route Table
    
    PrivateSubnet2Route:
        Type: AWS::EC2::Route
        Properties: 
            NatGatewayId: !Ref NatGateway2
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId: !Ref PrivateSubnetRouteTable2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties: 
            RouteTableId: !Ref PrivateSubnetRouteTable2
            SubnetId: !Ref PrivateSubnet2


Outputs:

    VPC:
        Description: VPC ID
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentName}-VPCID

    PublicSubnet1:
        Description: Public Subnet 1
        Value: !Ref PublicSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PB-SUB-NET1

    PublicSubnet2:
        Description: Public Subnet 2
        Value: !Ref PublicSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PB-SUB-NET2

    PrivateSubnet1:
        Description: Public Subnet 1
        Value: !Ref PublicSubnet1
        Export:
            Name: !Sub ${EnvironmentName}-PV-SUB-NET1

    PrivateSubnet2:
        Description: Private Subnet 2
        Value: !Ref PrivateSubnet2
        Export:
            Name: !Sub ${EnvironmentName}-PV-SUB-NET2

    PrivateSubnets:
        Description: Private Subnets
        Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
        Export:
            Name: !Sub ${EnvironmentName}-PV-SUB-NETS
